--- a/navbar.html
+++ b/navbar.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Something shit</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>My Navbar</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <style>
-      .krugly-face {
-        width: 80%;
-        border-radius: 50%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        padding: 0.5em;
-        margin-bottom: 1em;
-      }
-    </style>
   </head>
   <body>
-    <!-- Панель навігації -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Opolon BAR</a>
@@ -73,7 +63,7 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Nothing here</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
             </li>
@@ -95,25 +85,6 @@
         </div>
       </div>
     </nav>
-    <!-- Основний блок -->
-    <div class="container text-center my-3">
-      <!--  Перший рядок -->
-      <div class="row">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <!--  Преший стовпчик -->
-          <img class="krugly-face" src="Olexii.jpg" alt="Opolon" />
-          <h1 class="fw-light">Opolon</h1>
-          <p class="lead text-muted">
-            Hugest Opolon in the World! Makes this World better when using a
-            Bootstrap libruary!
-          </p>
-          <a href="#" target="_blank" class="btn btn-primary"> Old navbar </a>
-          <a href="navbar.html" target="_blank" class="btn btn-warning">
-            Navbar
-          </a>
-        </div>
-      </div>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
