--- a/index.html
+++ b/index.html
@@ -101,8 +101,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
           <!--  Преший стовпчик -->
-          <img class="krugly-face" src="https://allex303.github.io/opolon/Olexii.jpg" alt="Opolon" />
-          <h1 class="fw-light">Opolon</h1>
+          <img
+            class="krugly-face"
+            src="https://allex303.github.io/opolon/Olexii.jpg"
+            alt="Opolon"
+          />
+          <h1 class="fw-light">Opolonik</h1>
           <p class="lead text-muted">
             Hugest Opolon in the World! Makes this World better when using a
             Bootstrap libruary!
