--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Панель навігації -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="#">Opolon BAR</a>
         <button
           class="navbar-toggler"
@@ -111,7 +111,13 @@
             Hugest Opolon in the World! Makes this World better when using a
             Bootstrap libruary!
           </p>
-          <a href="#" target="_blank" class="btn btn-primary"> Old navbar </a>
+          <a
+            href="https://www.facebook.com/allex.egorov/"
+            target="_blank"
+            class="btn btn-primary"
+          >
+            Opolon's FB
+          </a>
           <a href="navbar.html" target="_blank" class="btn btn-warning">
             Navbar
           </a>
